[gd_scene load_steps=12 format=3 uid="uid://ceu1aad752bbm"]

[ext_resource type="Script" path="res://Game/Characters/Player/Player.gd" id="1_j8snq"]
[ext_resource type="Texture2D" uid="uid://cknueq28oge4l" path="res://Assets/Sprites/Characters/baldy.png" id="1_v2eyr"]
[ext_resource type="Shader" path="res://Game/Characters/Player/ThrowMeter.gdshader" id="3_ayxbo"]
[ext_resource type="Texture2D" uid="uid://g5i4isr46b8u" path="res://Assets/Sprites/GUI/throw_meter.png" id="4_elx5k"]
[ext_resource type="PackedScene" uid="uid://do6dvm7a7ju3o" path="res://Game/Characters/Player/HUD.tscn" id="5_ufb62"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ovri5"]
atlas = ExtResource("1_v2eyr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vm6q"]
atlas = ExtResource("1_v2eyr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8burj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovri5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vm6q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ppoyq"]
radius = 26.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gkf37"]
radius = 5.0
height = 42.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jwqku"]
shader = ExtResource("3_ayxbo")
shader_parameter/throw_charge = 0.0

[node name="Player" type="RigidBody2D"]
z_index = 10
lock_rotation = true
script = ExtResource("1_j8snq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8burj")
frame_progress = 0.0901662

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_ppoyq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 27)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gkf37")

[node name="ThrowChargeNode" type="Node2D" parent="."]
z_index = 20

[node name="Background" type="Sprite2D" parent="ThrowChargeNode"]
modulate = Color(1, 1, 1, 0.352941)
position = Vector2(32, 0)
rotation = 1.5708
texture = ExtResource("4_elx5k")

[node name="Foreground" type="Sprite2D" parent="ThrowChargeNode"]
z_index = 1
material = SubResource("ShaderMaterial_jwqku")
position = Vector2(32, 0)
rotation = 1.5708
texture = ExtResource("4_elx5k")

[node name="LagFix1" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="GrabRay" type="RayCast2D" parent="."]
target_position = Vector2(49, 0)
collision_mask = 5

[node name="HUD" parent="." instance=ExtResource("5_ufb62")]

[connection signal="timeout" from="LagFix1" to="." method="_on_lag_fix_1_timeout"]
